--- a/404.md
+++ b/404.md
@@ -13,7 +13,7 @@ permalink: /404.html
       border: 1.5px solid red;
       border-radius: 100%;
       height: 30px;
-      width: 30px
+      width: 30px;
       '>!</p>
     <p>ページが見つかりませんでした。</p>
   </body>
