--- a/404.md
+++ b/404.md
@@ -1,7 +1,6 @@
 ---
 permalink: /404.html
 ---
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset='utf-8'>
@@ -10,10 +9,11 @@ permalink: /404.html
     <h1>404 Not Found</h1>
     <p style='
       color: red;
-      border: 1.5px solid red;
+      font-size: 30px;
+      border: 2px solid red;
       border-radius: 100%;
-      height: 30px;
-      width: 30px;
+      height: 50px;
+      width: 50px;
       '>!</p>
     <p>ページが見つかりませんでした。</p>
   </body>
