--- a/404.md
+++ b/404.md
@@ -7,14 +7,10 @@ permalink: /404.html
   </head>
   <body>
     <h1>404 Not Found</h1>
-    <p style='
-      color: red;
-      font-size: 30px;
-      border: 2px solid red;
-      border-radius: 100%;
-      height: 50px;
-      width: 50px;
-      '>!</p>
-    <p>ページが見つかりませんでした。</p>
+    <p>
+      ページが見つかりませんでした。
+      <br>
+      URLをお確かめの上もう一度アクセスしてください。
+    </p>
   </body>
 </html>
