--- a/404.md
+++ b/404.md
@@ -4,6 +4,7 @@ permalink: /404.html
 <html>
   <head>
     <meta charset='utf-8'>
+    <link rel='shortcut icon' href='https://lego0821.github.io/lego0821/image/lego0821.png'>
   </head>
   <body>
     <h1>404 Not Found</h1>
