--- a/404.md
+++ b/404.md
@@ -7,6 +7,12 @@ permalink: /404.html
     <link rel='shortcut icon' href='https://lego0821.github.io/lego0821/image/lego0821.png'>
   </head>
   <body>
+    <nav>
+      <ul>
+          <li><a href="https://lego0821.github.io/lego0821/lego0821" class="logo,navs"><img src="https://lego0821.github.io/lego0821/image/lego0821.png"　class="logoImg" title="トップへ"></a></li>
+          <li id='navigations'><a href="https://lego0821.github.io/lego0821/productions" class='navs'>作品</a><a href="#" class='navs'>通知</a></li>
+      </ul>
+    </nav>
     <h1>404 Not Found</h1>
     <p>
       ページが見つかりませんでした。
