--- a/404.md
+++ b/404.md
@@ -5,6 +5,7 @@ permalink: /404.html
   <head>
     <meta charset='utf-8'>
     <link rel='shortcut icon' href='https://lego0821.github.io/lego0821/image/lego0821.png'>
+    <link rel="stylesheet" href="https://lego0821.github.io/lego0821/CSS/index.css">
   </head>
   <body>
     <nav>
@@ -18,6 +19,8 @@ permalink: /404.html
       ページが見つかりませんでした。
       <br>
       URLをお確かめの上もう一度アクセスしてください。
+      <br>
+      <a href='https://lego0821.github.io/lego0821/lego0821.html'>トップへ戻る</a>
     </p>
   </body>
 </html>
