--- a/404.md
+++ b/404.md
@@ -10,7 +10,11 @@ permalink: /404.html
   <body>
     <nav>
       <ul>
-          <li><a href="https://lego0821.github.io/lego0821/lego0821" class="logo,navs"><img src="https://lego0821.github.io/lego0821/image/lego0821.png"　class="logoImg" title="トップへ"></a></li>
+          <li>
+            <a href="https://lego0821.github.io/lego0821/lego0821" class="logo,navs">
+              <img src="https://lego0821.github.io/lego0821/image/lego0821.png"　class="logoImg" title="トップへ">
+            </a>
+          </li>
           <li id='navigations'><a href="https://lego0821.github.io/lego0821/productions" class='navs'>作品</a><a href="#" class='navs'>通知</a></li>
       </ul>
     </nav>
