--- a/404.md
+++ b/404.md
@@ -24,7 +24,7 @@ permalink: /404.html
       <br>
       URLをお確かめの上もう一度アクセスしてください。
       <br>
-      <a href='https://lego0821.github.io/lego0821/lego0821.html'>トップへ戻る</a>
+      <a href='https://lego0821.github.io/lego0821/index'>トップへ戻る</a>
     </p>
   </body>
 </html>
